--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ Flask-Cors = "^3.0.10"
 Flask-Migrate = "^3.1.0"
 requests = "^2.26.0"
 marshmallow-sqlalchemy = "^0.26.1"
-psycopg2 = "^2.9.1"
+psycopg2-binary = "^2.9.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
