--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ Flask-Migrate = "^3.1.0"
 requests = "^2.26.0"
 marshmallow-sqlalchemy = "^0.26.1"
 psycopg2-binary = "^2.9.2"
+mypy = "^0.910"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
