--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ requests = "^2.26.0"
 marshmallow-sqlalchemy = "^0.26.1"
 psycopg2-binary = "^2.9.2"
 mypy = "^0.910"
+bson = "^0.5.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
