--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "Nora"
+name = "server"
 version = "0.1.0"
 description = ""
 authors = ["Shihan Cheng <shihan.cheng@columbia.edu>"]
@@ -14,8 +14,11 @@ Flask-Migrate = "^3.1.0"
 requests = "^2.26.0"
 marshmallow-sqlalchemy = "^0.26.1"
 psycopg2-binary = "^2.9.2"
-mypy = "^0.910"
 bson = "^0.5.10"
+
+[tool.poetry.group.dev.dependencies]
+mypy = "^0.910"
+pylint = "^2.12.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
